[package]
name = "proxyables"
version = "0.1.0"
edition = "2021"

[dependencies]
proxyables_macros = { path = "./proxyables_macros" }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
thiserror = "1.0"
byteorder = "1.4"
tokio-util = { version = "0.7", features = ["codec", "compat"], optional = true } 

# We will need some synchronization primitives, standard library is usually okay, 
# but for async locks:
futures-locks = "0.7" 
rmpv = { version = "1.0", features = ["with-serde"] }
lazy_static = "1.4"
hostname = "0.3"
async-trait = "0.1"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
